objects/ERP_Device__c.object
<CustomObject>
    <fields>
        <fullName>Back_Side_Grind__c</fullName>
        <label>Back Side Grind</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Device__c</fullName>
        <description>BOW.PN.WAFER_PN</description>
        <label>Base Device</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonding_Type__c</fullName>
        <label>Bonding Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Burn_In__c</fullName>
        <label>Burn-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMDID__c</fullName>
        <label>CRMDID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Id__c</fullName>
        <description>Red Catalog Id</description>
        <label>Catalog Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chips_per_Wafer__c</fullName>
        <label>Chips per Wafer</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliverable_Type__c</fullName>
        <label>Deliverable Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CHIP</fullName>
                </value>
                <value>
                    <fullName>WAFER</fullName>
                </value>
                <value>
                    <fullName>MODULE</fullName>
                </value>
                <value>
                    <fullName>SIGE9HP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Business_Unit__c</fullName>
        <formula>TEXT(Device__r.Business_Unit__c)</formula>
        <label>Device Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Life_Cycle_Stage__c</fullName>
        <label>Device Life Cycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRE-WIN</fullName>
                </value>
                <value>
                    <fullName>PRE-PROD</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Product_Line__c</fullName>
        <formula>TEXT( Device__r.Product_Line__c )</formula>
        <label>Device Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRODUCTION</fullName>
                </value>
                <value>
                    <fullName>OPPORTUNITY</fullName>
                </value>
                <value>
                    <fullName>UNMAPPED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>ERP Devices</relationshipLabel>
        <relationshipName>ERP_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Inventory_Id__c</fullName>
        <description>ERP unique Id for the Item.</description>
        <externalId>true</externalId>
        <inlineHelpText>ERP unique Id for the Item.</inlineHelpText>
        <label>ERP Inventory Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Application__c</fullName>
        <label>End Application</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Demand_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Demand Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fabs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 10</fullName>
                </value>
                <value>
                    <fullName>FAB 11</fullName>
                </value>
                <value>
                    <fullName>ALTIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.003UM</fullName>
                </value>
                <value>
                    <fullName>0.007UM</fullName>
                </value>
                <value>
                    <fullName>0.010UM</fullName>
                </value>
                <value>
                    <fullName>0.014UM</fullName>
                </value>
                <value>
                    <fullName>0.012UM</fullName>
                </value>
                <value>
                    <fullName>0.020UM</fullName>
                </value>
                <value>
                    <fullName>0.022UM</fullName>
                </value>
                <value>
                    <fullName>0.028UM</fullName>
                </value>
                <value>
                    <fullName>0.032UM</fullName>
                </value>
                <value>
                    <fullName>0.040UM</fullName>
                </value>
                <value>
                    <fullName>0.045UM</fullName>
                </value>
                <value>
                    <fullName>0.055UM</fullName>
                </value>
                <value>
                    <fullName>0.060UM</fullName>
                </value>
                <value>
                    <fullName>0.065UM</fullName>
                </value>
                <value>
                    <fullName>0.086UM</fullName>
                </value>
                <value>
                    <fullName>0.09UM</fullName>
                </value>
                <value>
                    <fullName>0.11UM</fullName>
                </value>
                <value>
                    <fullName>0.13UM</fullName>
                </value>
                <value>
                    <fullName>0.14UM</fullName>
                </value>
                <value>
                    <fullName>0.152UM</fullName>
                </value>
                <value>
                    <fullName>0.153UM</fullName>
                </value>
                <value>
                    <fullName>0.15UM</fullName>
                </value>
                <value>
                    <fullName>0.16UM</fullName>
                </value>
                <value>
                    <fullName>0.17UM</fullName>
                </value>
                <value>
                    <fullName>0.18UM</fullName>
                </value>
                <value>
                    <fullName>0.20UM</fullName>
                </value>
                <value>
                    <fullName>0.22UM</fullName>
                </value>
                <value>
                    <fullName>0.25UM</fullName>
                </value>
                <value>
                    <fullName>0.30UM</fullName>
                </value>
                <value>
                    <fullName>0.32UM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITARNew__c</fullName>
        <label>ITAR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITAR__c</fullName>
        <formula>TEXT( Device__r.ITAR_Flag__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITAR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>ReadytoSend</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrity_Error_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrity Error Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrity_Error__c</fullName>
        <label>Integrity Error</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_the_Product_subject_to_ITAR_EC_GTC__c</fullName>
        <formula>Device__r.Is_the_Product_subject_to_ITAR_EC_GTC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is the Product subject to ITAR EC(GTC)?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <description>EXIT PART/COMPONENT</description>
        <inlineHelpText>EXIT PART/COMPONENT PART</inlineHelpText>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EXIT PART</fullName>
                </value>
                <value>
                    <fullName>COMPONENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Level_of_Metal__c</fullName>
        <label>Last Level of Metal</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Level__c</fullName>
        <label>Lead Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Levels_Of_Metal__c</fullName>
        <label>Levels Of Metal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MD_Part_Name__c</fullName>
        <label>MD Part Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Process__c</fullName>
        <label>MD Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMOS 7SF 5LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 7SF 6LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 9S-SOI 6LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 8SF 6LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 8SF 7LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 6SF 5LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 8 4LM</fullName>
                </value>
                <value>
                    <fullName>VENDOR</fullName>
                </value>
                <value>
                    <fullName>EDRM8SF 7LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 6S2 5LM</fullName>
                </value>
                <value>
                    <fullName>BICMOS 5S 3LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 7SF 4LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 7S 6LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 7S0 6LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 6SF 4LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 5S6 4LM</fullName>
                </value>
                <value>
                    <fullName>EDRM7SF 6LMZ</fullName>
                </value>
                <value>
                    <fullName>CMOS 8SE 7LM</fullName>
                </value>
                <value>
                    <fullName>SIGE 5S0 3LM</fullName>
                </value>
                <value>
                    <fullName>CM8SED 6LM</fullName>
                </value>
                <value>
                    <fullName>CMOS 6SF 6LM</fullName>
                </value>
                <value>
                    <fullName>CMS8SEC</fullName>
                </value>
                <value>
                    <fullName>CMMS6SF</fullName>
                </value>
                <value>
                    <fullName>CMOS 7SF 6MZ</fullName>
                </value>
                <value>
                    <fullName>CMOS 5S5 3MT</fullName>
                </value>
                <value>
                    <fullName>CMOS 7SF 6MT</fullName>
                </value>
                <value>
                    <fullName>CMOS 8SF 8LM</fullName>
                </value>
                <value>
                    <fullName>CSOI 9S2 8LM</fullName>
                </value>
                <value>
                    <fullName>EDRM7SF 5MT</fullName>
                </value>
                <value>
                    <fullName>SIGE 6SF 5LM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSL_Rating__c</fullName>
        <label>MSL Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Layer_Count__c</fullName>
        <label>Mask Layer Count</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Num_Cycles__c</fullName>
        <label>Max Num Cycles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Test_Flag__c</fullName>
        <label>Module Test Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module_Tester_Type__c</fullName>
        <label>Module Tester Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ERP Devices</relationshipLabel>
        <relationshipName>ERP_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option_ID__c</fullName>
        <externalId>true</externalId>
        <label>Option ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option</label>
        <referenceTo>Customer_Requirement__c</referenceTo>
        <relationshipLabel>ERP Devices</relationshipLabel>
        <relationshipName>ERP_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSANew__c</fullName>
        <label>PSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA__c</fullName>
        <formula>Device__r.PSA_Read__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSCNew__c</fullName>
        <label>PSC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSC__c</fullName>
        <formula>Device__r.PSC_Read__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_IO__c</fullName>
        <label>Package IO&apos;s</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <description>Red Part Number. Generated in PLM.</description>
        <externalId>true</externalId>
        <inlineHelpText>Red Part Number. Generated in PLM.</inlineHelpText>
        <label>Part Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Part_Reliability_Grade__c</fullName>
        <label>Part Reliability Grade</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Type__c</fullName>
        <label>Part Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process ID</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>ERP Devices</relationshipLabel>
        <relationshipName>ERP_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Id_Name__c</fullName>
        <label>Process Id Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Line</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_CRMDID__c</fullName>
        <label>SFDC CRMDID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design In</fullName>
                </value>
                <value>
                    <fullName>Tapeout</fullName>
                </value>
                <value>
                    <fullName>Prototype</fullName>
                </value>
                <value>
                    <fullName>RTR</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>EOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subbrand__c</fullName>
        <inlineHelpText>Red Subbrand</inlineHelpText>
        <label>Subbrand</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Process_Node__c</fullName>
        <label>Target Process Node</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_wafer__c</fullName>
        <label>Wafer Test Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trench_Type__c</fullName>
        <label>Trench Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Stream__c</fullName>
        <label>Value Stream</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_Diameter__c</fullName>
        <label>Wafer Diameter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wafer_Tester_Type__c</fullName>
        <label>Wafer Tester Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>ERP Device</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fab__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_ID__c</columns>
        <columns>Device__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ERP_Device_without_CRMDID</fullName>
        <columns>NAME</columns>
        <columns>CRMDID__c</columns>
        <columns>Device__c</columns>
        <columns>ERP_Inventory_Id__c</columns>
        <columns>Stage__c</columns>
        <columns>Fab__c</columns>
        <columns>Process_Id_Name__c</columns>
        <columns>Geometry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMDID__c</field>
            <operation>equals</operation>
        </filters>
        <label>ERP Device without  CRMDID</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FAB_9_and_FAB_10</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>End_Application__c</columns>
        <columns>Fab__c</columns>
        <columns>Geometry__c</columns>
        <columns>MD_Part_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 9</value>
        </filters>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 10</value>
        </filters>
        <label>FAB 9 and FAB 10</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fab_9_10</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Device__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Device_Business_Unit__c</columns>
        <columns>Option_ID__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Fab__c</columns>
        <columns>Target_Process_Node__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 9</value>
        </filters>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 10</value>
        </filters>
        <label>Fab 9/10</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_9_and_10</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Device__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Base_Device__c</columns>
        <columns>Device_Type__c</columns>
        <columns>Fab__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Target_Process_Node__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 9</value>
        </filters>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 10</value>
        </filters>
        <label>Fab 9 and 10</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ReadyToSend</fullName>
        <columns>NAME</columns>
        <columns>Geometry__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Technology__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Integrity_Error__c</columns>
        <columns>Integrity_Error_Flag__c</columns>
        <columns>ITARNew__c</columns>
        <columns>PSANew__c</columns>
        <columns>PSCNew__c</columns>
        <columns>Stage__c</columns>
        <columns>CRMDID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>None</value>
        </filters>
        <label>ReadyToSend</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ERP Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ERP_Inventory_Id_is_required_for_Orange</fullName>
        <active>true</active>
        <errorConditionFormula>(INCLUDES(Fab__c,&apos;FAB 1&apos;) || INCLUDES(Fab__c,&apos;FAB 2&apos;) || INCLUDES(Fab__c,&apos;FAB 3&apos;) || INCLUDES(Fab__c,&apos;FAB 3E&apos;) || INCLUDES(Fab__c,&apos;FAB 5&apos;) || INCLUDES(Fab__c,&apos;FAB 6&apos;) || INCLUDES(Fab__c,&apos;FAB 7&apos;) || INCLUDES(Fab__c,&apos;FAB 8&apos;) || INCLUDES(Fab__c,&apos;FAB 11&apos;) || INCLUDES(Fab__c,&apos;ALTIS&apos;)) &amp;&amp;  ISNULL (ERP_Inventory_Id__c)</errorConditionFormula>
        <errorDisplayField>ERP_Inventory_Id__c</errorDisplayField>
        <errorMessage>ERP Inventory Id is required for Orange Devices.</errorMessage>
    </validationRules>
</CustomObject>